添加图片加载功能；UI进行调整；文档完善；

--- a/Dagger2-Retrofit-Example/app/build.gradle
+++ b/Dagger2-Retrofit-Example/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     //Gson
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
